embedded map bug fixed on mobile

--- a/meta-clean-site/assets/css/style.scss
+++ b/meta-clean-site/assets/css/style.scss
@@ -119,7 +119,7 @@ section {
     color: white;
     .map {
         iframe {
-            width: 400px; 
+            width: 350px; 
             height: 400px;
             border: 0;
             border-radius: 2%;
